fixed list item spacing on about page;

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -1,7 +1,7 @@
 .about {
   .events {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
     li {
       margin-top: 0.75rem;
